--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -3501,7 +3501,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏הוספת פרופיל VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"עריכת פרופיל"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"מחיקת פרופיל"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN בחיבור תמידי"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN שפועל כל הזמן"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏לא נוספו רשתות VPN"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏נשארים מחוברים ל-VPN תמיד"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"לא נתמך על ידי אפליקציה זו"</string>
