--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -1403,8 +1403,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Asl hajmda koʻproq batareya quvvati sarflanadi. Tiniqlik almashtirilsa, ayrim ilovalar qayta ishga tushadi."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Tanlangan"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Ranglar"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Tabiiy"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Yorqin"</string>
@@ -1760,17 +1759,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"“<xliff:g id="NAME_0">^1</xliff:g>” qurilmasi sekin ishlayotganga o‘xshaydi. \n\nAgar davom etsangiz, ko‘chirib o‘tkazilgan ilovalar ishlamasligi va ma’lumotlarni o‘tkazish uzoq vaqt olishi mumkin. \n\nYuqori unumdorlikka erishish uchun tezkor qurilmadan (<xliff:g id="NAME_1">^1</xliff:g>) foydalaning."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"<xliff:g id="NAME">^1</xliff:g> qanday ishlatilsin?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD kartani ichki xotira shaklida formatlash"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Ilova va media fayllar faqat shu planshetda saqlansin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatlash"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD kartani ichki xotira shaklida formatlash"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Ilova va media fayllar faqat shu telefonda saqlansin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatlash"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Yoki"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD kartani ixcham xotira shaklida formatlash"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Rasm, video, musiqa va boshqa fayllarni saqlash va ularni boshqa qurilmalarda ochish &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatlash"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Keyinroq sozlash"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Bu <xliff:g id="NAME">^1</xliff:g> formatlansinmi?"</string>
