Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ic95f826a9d15e46a6ba2543659b5e01c292f0bab

Former-commit-id: c262175b3c565d770721b648ebf29ea40d795d17

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1801,7 +1801,7 @@
     <string name="tether_settings_summary_hotspot_on_tether_on" msgid="6110241048260139633">"Punt d\'accés Wi-Fi activat, compartició de xarxa"</string>
     <string name="tether_settings_summary_hotspot_on_tether_off" msgid="5057598961245943644">"Punt d\'accés Wi-Fi activat"</string>
     <string name="tether_settings_summary_hotspot_off_tether_on" msgid="7181518138494995888">"Compartició de xarxa"</string>
-    <string name="tether_settings_disabled_on_data_saver" msgid="9054069463426952689">"No es pot compartir la xarxa ni utilitzar punts d\'accés Wi-Fi mentre la funció Economitzador de dades està activada"</string>
+    <string name="tether_settings_disabled_on_data_saver" msgid="9054069463426952689">"No es pot compartir la xarxa ni utilitzar punts d\'accés Wi-Fi mentre la funció Estalvi de dades està activada"</string>
     <string name="tether_settings_summary_hotspot_only" msgid="8529008147731140279">"Només punt d\'accés Wi‑Fi"</string>
     <string name="tether_settings_summary_usb_tethering_only" msgid="6351624505239356221">"Només USB"</string>
     <string name="tether_settings_summary_bluetooth_tethering_only" msgid="1451008625343274930">"Només Bluetooth"</string>
@@ -4699,7 +4699,7 @@
     <string name="condition_battery_summary" msgid="8436806157833107886">"Hi ha funcions restringides"</string>
     <string name="condition_cellular_title" msgid="155474690792125747">"Dades mòbils desactivades"</string>
     <string name="condition_cellular_summary" msgid="1678098728303268851">"Només es pot accedir a Internet per Wi‑Fi"</string>
-    <string name="condition_bg_data_title" msgid="2719263664589753094">"Economitzador de dades"</string>
+    <string name="condition_bg_data_title" msgid="2719263664589753094">"Estalvi de dades"</string>
     <string name="condition_bg_data_summary" msgid="1736255283216193834">"Hi ha funcions restringides"</string>
     <string name="condition_work_title" msgid="174326145616998813">"Perfil de treball desactivat"</string>
     <string name="condition_work_summary" msgid="7113473121312772398">"Per a les aplicacions i les notificacions"</string>
@@ -4768,8 +4768,8 @@
     <string name="configure" msgid="1499586749829665889">"Configura"</string>
     <string name="data_usage_other_apps" msgid="5649047093607329537">"Altres aplicacions que utilitzen dades"</string>
     <plurals name="data_saver_unrestricted_summary" formatted="false" msgid="3316296488378947221">
-      <item quantity="other"><xliff:g id="COUNT">%1$d</xliff:g> aplicacions poden utilitzar dades sense restricció quan l\'Economitzador de dades està activat</item>
-      <item quantity="one">1 aplicació pot utilitzar dades sense restricció quan l\'Economitzador de dades està activat</item>
+      <item quantity="other"><xliff:g id="COUNT">%1$d</xliff:g> aplicacions poden utilitzar dades sense restricció quan l\'Estalvi de dades està activat</item>
+      <item quantity="one">1 aplicació pot utilitzar dades sense restricció quan l\'Estalvi de dades està activat</item>
     </plurals>
     <string name="data_usage_title" msgid="4039024073687469094">"Dades principals"</string>
     <string name="data_usage_wifi_title" msgid="1060495519280456926">"Dades Wi‑Fi"</string>
@@ -4791,14 +4791,14 @@
     <string name="no_carrier_update_now_text" msgid="7898004907837200752">"Actualitzat ara mateix"</string>
     <string name="launch_mdp_app_text" msgid="8791816789749304897">"Mostra el pla"</string>
     <string name="launch_wifi_text" msgid="976421974332512894">"Mostra els detalls"</string>
-    <string name="data_saver_title" msgid="2593804270788863815">"Economitzador de dades"</string>
+    <string name="data_saver_title" msgid="2593804270788863815">"Estalvi de dades"</string>
     <string name="unrestricted_data_saver" msgid="7922563266857367495">"Dades sense restricció"</string>
     <string name="restrict_background_blocklisted" msgid="2308345280442438232">"Les dades en segon pla estan desactivades"</string>
     <string name="data_saver_on" msgid="7848893946018448793">"Activat"</string>
     <string name="data_saver_off" msgid="5891210864117269045">"Desactivat"</string>
-    <string name="data_saver_switch_title" msgid="7111538580123722959">"Utilitza l\'Economitzador de dades"</string>
+    <string name="data_saver_switch_title" msgid="7111538580123722959">"Utilitza l\'Estalvi de dades"</string>
     <string name="unrestricted_app_title" msgid="7117585996574329284">"Ús de dades sense restricció"</string>
-    <string name="unrestricted_app_summary" msgid="282698963532000403">"Permet dades sense restricció amb Economitzador de dades activat"</string>
+    <string name="unrestricted_app_summary" msgid="282698963532000403">"Permet dades sense restricció amb Estalvi de dades activat"</string>
     <string name="home_app" msgid="6056850504746902747">"Aplicació d\'inici"</string>
     <string name="no_default_home" msgid="3588073707316139318">"No hi ha cap pàgina d\'inici predeterminada"</string>
     <string name="lockpattern_settings_require_cred_before_startup" msgid="4098653943835666086">"Inici segur"</string>
