--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -837,7 +837,7 @@
     <string name="bluetooth_error_title" msgid="2284738188253690278"></string>
     <string name="bluetooth_connecting_error_message" msgid="3941893154784152112">"اتصال به <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ممکن نیست."</string>
     <string name="bluetooth_preference_scan_title" msgid="3460316252463771851">"اسکن برای دستگاه‌ها"</string>
-    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوری کردن"</string>
+    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوردن"</string>
     <string name="bluetooth_searching_for_devices" msgid="6541984133657573124">"در حال جستجو..."</string>
     <string name="bluetooth_preference_device_settings" msgid="1688662188157019998">"تنظیمات دستگاه"</string>
     <string name="bluetooth_preference_paired_dialog_title" msgid="1090131276572055841">"دستگاه مرتبط‌شده"</string>
@@ -2931,7 +2931,7 @@
     <string name="menu_stats_unplugged" msgid="7125297366200634285">"<xliff:g id="UNPLUGGED">%1$s</xliff:g> از زمان جدا کردن"</string>
     <string name="menu_stats_last_unplugged" msgid="230678127178268655">"در حین قطع اتصال آخر برای <xliff:g id="UNPLUGGED">%1$s</xliff:g>"</string>
     <string name="menu_stats_total" msgid="2713445396954503670">"مقدار کل استفاده"</string>
-    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوری کردن"</string>
+    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوردن"</string>
     <string name="process_mediaserver_label" msgid="6135260215912215092">"سرور رسانه"</string>
     <string name="process_dex2oat_label" msgid="1190208677726583153">"بهینه‌سازی برنامه"</string>
     <string name="process_network_tethering" msgid="6822671758152900766">"اشتراک‌گذاری اینترنت"</string>
@@ -3317,7 +3317,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏افزودن نمایه VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"ویرایش نمایه"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"حذف نمایه"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه فعال"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه روشن"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏شبکه VPN اضافه نشده است"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏همیشه به VPN‌ متصل بمانید"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"توسط این برنامه پشتیبانی نمی‌شود"</string>
