--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -1372,6 +1372,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"+1080p FHD"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"+1440p QHD"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"רזולוציה מלאה מובילה לשימוש גבוה בסוללה. שינוי הרזולוציה עלול לגרום להפעלה מחדש של חלק מהאפליקציות."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"נבחרה"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"צבעים"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"גוון טבעי"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"גוון מוגבר"</string>
@@ -3409,7 +3410,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏הוספת פרופיל VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"עריכת פרופיל"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"מחיקת פרופיל"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN בחיבור תמידי"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN שפועל כל הזמן"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏לא נוספו רשתות VPN"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏נשארים מחוברים ל-VPN תמיד"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"לא נתמך על ידי אפליקציה זו"</string>
