--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1410,6 +1410,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"تستخدِم الدقة الكاملة قدرًا أكبر من طاقة بطاريتك. وقد يؤدي تبديل الدقة إلى إعادة تشغيل بعض التطبيقات."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"الألوان"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"طبيعية"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"مُحسنة"</string>
