--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -1332,6 +1332,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p (FHD+)"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p (QHD+)"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Пълната разделителна способност изразходва батерията ви в по-голяма степен. Превключването на разделителната способност може да доведе до рестартирането на някои приложения."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Цветове"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Естествени"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Подсилени"</string>
