--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -847,7 +847,7 @@
     <string name="bluetooth_error_title" msgid="2284738188253690278"></string>
     <string name="bluetooth_connecting_error_message" msgid="3941893154784152112">"اتصال به <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ممکن نیست."</string>
     <string name="bluetooth_preference_scan_title" msgid="3460316252463771851">"اسکن برای دستگاه‌ها"</string>
-    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوری کردن"</string>
+    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوردن"</string>
     <string name="bluetooth_searching_for_devices" msgid="6541984133657573124">"در حال جستجو..."</string>
     <string name="bluetooth_preference_device_settings" msgid="1688662188157019998">"تنظیمات دستگاه"</string>
     <string name="bluetooth_preference_paired_dialog_title" msgid="1090131276572055841">"دستگاه مرتبط‌شده"</string>
@@ -1330,6 +1330,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"«وضوح کامل» از شارژ باتری بیشتری استفاده می‌کند. تغییر دادن وضوح ممکن است باعث شود برخی‌از برنامه‌ها بازراه‌اندازی شوند."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"رنگ‌"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"طبیعی"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"تقویت‌شده"</string>
@@ -2941,7 +2943,7 @@
     <string name="menu_stats_unplugged" msgid="7125297366200634285">"<xliff:g id="UNPLUGGED">%1$s</xliff:g> از زمان جدا کردن"</string>
     <string name="menu_stats_last_unplugged" msgid="230678127178268655">"در حین قطع اتصال آخر برای <xliff:g id="UNPLUGGED">%1$s</xliff:g>"</string>
     <string name="menu_stats_total" msgid="2713445396954503670">"مقدار کل استفاده"</string>
-    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوری کردن"</string>
+    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوردن"</string>
     <string name="process_mediaserver_label" msgid="6135260215912215092">"سرور رسانه"</string>
     <string name="process_dex2oat_label" msgid="1190208677726583153">"بهینه‌سازی برنامه"</string>
     <string name="process_network_tethering" msgid="6822671758152900766">"اشتراک‌گذاری اینترنت"</string>
@@ -3327,7 +3329,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏افزودن نمایه VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"ویرایش نمایه"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"حذف نمایه"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه فعال"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه روشن"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏شبکه VPN اضافه نشده است"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏همیشه به VPN‌ متصل بمانید"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"توسط این برنامه پشتیبانی نمی‌شود"</string>
