--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1372,6 +1372,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Plné rozlíšenie využíva vo väčšej miere batériu. Ak rozlíšenie prepnete, niektoré aplikácie sa môžu reštartovať."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Vybrané"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Farby"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Prirodzené"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Zosilnené"</string>
@@ -3819,7 +3820,7 @@
     <string name="dock_audio_media_enabled" msgid="4039126523653131281">"Iba zvukové médiá"</string>
     <string name="emergency_tone_silent" msgid="5048069815418450902">"Ticho"</string>
     <string name="emergency_tone_alert" msgid="1977698889522966589">"Tóny"</string>
-    <string name="emergency_tone_vibrate" msgid="6282296789406984698">"Vibrovanie"</string>
+    <string name="emergency_tone_vibrate" msgid="6282296789406984698">"Vibrácie"</string>
     <string name="boot_sounds_title" msgid="5033062848948884111">"Zvuky pri spustení"</string>
     <string name="live_caption_title" msgid="8617086825712756983">"Živý prepis"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"Automatické titulkovanie médií"</string>
